# CppProjectTemplate

./: CMakeLists.txt  README.md  build.sh
Package/: Package.config  build-package.sh
Package/Deliverable/DEBIAN/: control  postinst  preinst
src/: pmaths.cpp
unitTest/: CMakeLists.txt  build.sh  pmathsTest.cpp
